@@ -1,6 +1,15 @@
 2007-02-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/_agents/edit.py:
+	* gaupol/gtk/cellrend/multiline.py:
+	* gaupol/gtk/cellrend/time.py:
+	* gaupol/gtk/page.py:
+	Fix inconsistensies and segfaults and rest of the shit between the
+	cell renderers and the edit agent.
+
+2007-02-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/_agents/edit.py:
 	* gaupol/gtk/_agents/open.py:
 	Add cell editing.
 
